--- a/README
+++ b/README
@@ -2,3 +2,7 @@ Inside of my main file (dungeonGame.cpp) I have parseFile(Dungeon *d) and printM
        In parseFile(...) I find the file, print what it is by the meta data (the first line). Then I go to parsing. I use an enumMap to 
        understand the first word of each line that decides what will happen. Then I parse accordingly. When a monster description is fully 
        loaded, I add it into a vector<monsterDescription> mD where I will iterate through later to print out the values. 
+       
+       
+       
+ [Note to self](https://github.com/wasartin/rogueLikeGame/tree/75b6fffebe8c08907eecab654676574e27840ee5 "Last pure C commit")
